--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: main
+name: build
 
 on:
   pull_request:
@@ -6,43 +6,7 @@ on:
       - main
 
 jobs:
-  content_requirements:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v1
-
-      - name: Content
-        id: check_license
-        uses: andstor/file-existence-action@v1
-        with:
-          files: "LICENSE, README.md, example, CHANGELOG.md, CONTRIBUTING.md"
-
-      - name: File exists
-        if: steps.check_files.outputs.files_exists == 'true'
-        run: echo Content is ok!
-
-      - name: Check Description
-        run: echo | grep -q Description README.md ; echo $?
-
-      - name: Check Example
-        run: echo | grep -q Example README.md ; echo $?
-
-      - name: Check Installation
-        run: echo | grep -q Installation README.md ; echo $?
-
-  package_analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
-
-      - name: Run package analyzer 🔍
-        uses: axel-op/dart-package-analyzer@v3
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-  code_analysis:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -61,30 +25,23 @@ jobs:
         run: |
           dart pub global activate dependency_validator
           dart pub global run dependency_validator:dependency_validator
-
       - name: Run analyzer 🔍
         run: flutter analyze --fatal-warnings --fatal-infos .
 
       - name: Run formatter ⚙️
         run: flutter format --set-exit-if-changed .
 
-      - name: Run test ⚙️
+      - name: Run tests ⚙️
         run: flutter test
 
-  build_android_example:
+  package-analysis:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - name: Install Flutter 🔧
-        uses: subosito/flutter-action@v1
+      - name: Run package analyzer 🔍
+        uses: axel-op/dart-package-analyzer@v3
         with:
-          channel: "stable"
-
-      - name: Build
-        run: |
-          cd example
-          flutter pub get
-          flutter build apk
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
