--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,4 +40,4 @@ jobs:
         run: |
           cd example
           flutter pub get
-          flutter build ipa
+          flutter build ios --release --no-codesign
