--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,10 +6,22 @@ on:
       - main
 
 jobs:
-  content_requirements:
+  package_analysis:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
+        uses: actions/checkout@v2
+
+      - name: Run package analyzer 🔍
+        uses: axel-op/dart-package-analyzer@v3
+        with:
+          githubToken: ${{ secrets.GITHUB_TOKEN }}
+
+  code_analysis:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
         uses: actions/checkout@v2
 
       - name: Content
@@ -31,44 +43,26 @@ jobs:
       - name: Check Installation
         run: echo | grep -q Installation README.md ; echo $?
 
-  package_analysis:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
-
-      - name: Run package analyzer 🔍
-        uses: axel-op/dart-package-analyzer@v3
-        with:
-          githubToken: ${{ secrets.GITHUB_TOKEN }}
-
-  code_analysis:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2
-
       - name: Install Flutter 🔧
         uses: subosito/flutter-action@v1
         with:
           channel: "stable"
 
-      - name: Install dependencies 🔧
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Run dependency validator 🔍
+      - name: Run dependency validator
         run: |
           dart pub global activate dependency_validator
           dart pub global run dependency_validator:dependency_validator
 
-      - name: Run analyzer 🔍
+      - name: Run analyzer
         run: flutter analyze --fatal-warnings --fatal-infos .
 
-      - name: Run formatter ⚙️
+      - name: Run formatter
         run: flutter format --set-exit-if-changed .
 
-      - name: Run test ⚙️
+      - name: Run test
         run: flutter test
 
 
