--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
-  code_analysis:
+  requirements_analysis:
     runs-on: ubuntu-latest
 
     steps:
