Updated graddle version

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'lib'
-      - 'example'
+#    paths:
+#      - 'lib'
+#      - 'example'
 
 jobs:
   build_examples:
