--- a/.github/workflows/analysis.yaml
+++ b/.github/workflows/analysis.yaml
@@ -43,7 +43,7 @@ jobs:
       - name: Check Installation
         run: echo | grep -q Installation README.md ; echo $?
 
-      - name: Install Flutter 🔧
+      - name: Install Flutter
         uses: subosito/flutter-action@v1
         with:
           channel: "stable"
