--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,14 @@
 name: build_example
 
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["analysis"]
+    types: [completed]
 
 jobs:
   build:
-    needs: analysis
     runs-on: macos-latest
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout 
         uses: actions/checkout@v2
