--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -2,7 +2,7 @@ name: "Build package example"
 
 on:
   workflow_run:
-    workflows: ["analysis"]
+    workflows: ["Analysis"]
     types: [completed]
 
 jobs:
