--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -1,12 +1,36 @@
 name: "Build package example"
 
 on:
-  workflow_run:
-    workflows: ["Analysis"]
-    types: [completed]
+  pull_request:
+    branches:
+      - main 
+    
+  # workflow_run:
+    # workflows: ["/Analysis"]
+    # types: [completed]
 
 jobs:
-  build:
+  build_android_example:
+    runs-on: macos-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+
+      - name: Install dependencies
+        run: flutter pub get
+
+      - name: Build Android
+        run: |
+          cd example
+          flutter pub get
+          flutter build apk
+  build_ios_example:
     runs-on: macos-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
@@ -27,8 +51,3 @@ jobs:
           flutter pub get
           flutter build ios --release --no-codesign
 
-      - name: Build Android
-        run: |
-          cd example
-          flutter pub get
-          flutter build apk
