--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build_android_example:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout
