--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -17,6 +17,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Java Environment
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+           java-version: '12.x'
+
       - name: Install Flutter
         uses: subosito/flutter-action@v1
         with:
@@ -30,6 +36,7 @@ jobs:
           cd example
           flutter pub get
           flutter build apk
+  
   build_ios_example:
     runs-on: macos-latest
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
