--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -14,28 +14,25 @@ jobs:
     runs-on: ubuntu-latest
     # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+        # Setup Java environment in order to build the Android app.
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
 
-      - name: Java Environment
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-           java-version: '12.x'
+    - name: Install Flutter
+      uses: subosito/flutter-action@v1
+      with:
+        channel: "stable"
 
-      - name: Install Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
+    - name: Install dependencies
+      run: flutter pub get
 
-      - name: Install dependencies
-        run: flutter pub get
-
-      - name: Build Android
-        run: |
-          cd example
-          flutter pub get
-          flutter build apk
+    - name: Build Android
+      run: |
+        cd example
+        flutter pub get
+        flutter build apk
   
   build_ios_example:
     runs-on: macos-latest
