--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -19,9 +19,13 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-        
+
     - name: Android NDK toolchain Setup
       uses: ravinderjangra/android-ndk-toolchain-setup@0.1
+      with: 
+        api: '21'
+        arch: 'arm'
+        install-location: 'toolchains'
 
     - name: Install Flutter
       uses: subosito/flutter-action@v1
