--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -20,12 +20,13 @@ jobs:
       with:
         java-version: '12.x'
 
-    - name: Android NDK toolchain Setup
-      uses: ravinderjangra/android-ndk-toolchain-setup@0.2
-      with: 
-        api: '21'
-        arch: 'arm'
-        install-location: 'toolchains'
+    - name: Android NDK toolchain Setup 
+    - uses: actions/checkout@v2
+    - uses: nttld/setup-ndk@v1
+      with:
+        ndk-version: r21e
+    - run: ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=./Android.mk NDK_APPLICATION_MK=./Application.mk
+
 
     - name: Install Flutter
       uses: subosito/flutter-action@v1
