--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -3,11 +3,13 @@ name: "Build package examples"
 on:
   workflow_run:
     workflows: ["Analysis"]
-    types: [completed]
+    types:
+      - completed
 
 jobs:
   build_android_example:
     runs-on: ubuntu-latest
+    
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       # Setup Java environment in order to build the Android app.
