--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -3,6 +3,7 @@ name: "Build package examples"
 on:
   workflow_run:
     workflows: ["Analysis"]
+    branches: [main]
     # types:
       # - completed
 
