--- a/.github/workflows/build_example.yaml
+++ b/.github/workflows/build_example.yaml
@@ -3,9 +3,8 @@ name: "Build package examples"
 on:
   workflow_run:
     workflows: ["Analysis"]
-    branches: [main]
-    # types:
-      # - completed
+    types:
+      - completed
 
 jobs:
   build_android_example:
