--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -21,6 +21,25 @@ jobs:
         with:
           channel: "stable"
 
+      - name: Content
+        id: check_license
+        uses: andstor/file-existence-action@v1
+        with:
+          files: "LICENSE, README.md, example, CHANGELOG.md, CONTRIBUTING.md"
+
+      - name: File exists
+        if: steps.check_files.outputs.files_exists == 'true'
+        run: echo Content is ok!
+
+      - name: Check Description
+        run: echo | grep -q Description README.md ; echo $?
+
+      - name: Check Example
+        run: echo | grep -q Example README.md ; echo $?
+
+      - name: Check Installation
+        run: echo | grep -q Installation README.md ; echo $?
+
       - name: Install dependencies 
         run: flutter pub get
 
