--- a/.github/workflows/publish_to_pub.yml
+++ b/.github/workflows/publish_to_pub.yml
@@ -7,14 +7,22 @@ on:
 
 jobs:
   analysis:
-    uses: internetova/actions/.github/workflows/analysis.yml@main
+    uses: surfstudio/flutter-ci-workflows/.github/workflows/analysis_package_analytics.yml@main
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  testing:
+    needs: analysis
+    uses: surfstudio/flutter-ci-workflows/.github/workflows/testing.yml@main
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
   package-publishing:
-    needs: analysis
-    uses: internetova/actions/.github/workflows/publish_to_pub.yml@main
+    needs: [ analysis, testing ]
+    uses: surfstudio/flutter-ci-workflows/.github/workflows/publish_to_pub.yml@main
     with:
       PANA_TOTAL: '100'
     secrets:
-      CREDENTIAL_JSON: ${{ secrets.CREDENTIAL_JSON }}
-      OAUTH_ACCESS_TOKEN: ${{ secrets.OAUTH_ACCESS_TOKEN }}
-      OAUTH_REFRESH_TOKEN: ${{ secrets.OAUTH_REFRESH_TOKEN }}
+      PUB_CREDENTIAL_JSON: ${{ secrets.PUB_CREDENTIAL_JSON }}
+      PUB_OAUTH_ACCESS_TOKEN: ${{ secrets.PUB_OAUTH_ACCESS_TOKEN }}
+      PUB_OAUTH_REFRESH_TOKEN: ${{ secrets.PUB_OAUTH_REFRESH_TOKEN }}
