--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -7,8 +7,12 @@ dependencies:
   analytics:
     path: ../
   firebase_analytics: ^8.3.4
+  firebase_analytics_web: ^0.4.1
   firebase_core: ^1.8.0
+  firebase_core_web: ^1.2.0
   flutter:
+    sdk: flutter
+  flutter_web_plugins:
     sdk: flutter
 
 dev_dependencies:
