--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -6,6 +6,7 @@ version: 1.0.0+1
 dependencies:
   analytics:
     path: ../
+  appmetrica_plugin: ^1.4.0
   firebase_analytics: ^8.3.4
   firebase_core: ^1.8.0
   flutter:
